<resources>
    <string name="app_name">kaffeineMe</string>
    <string name="quantity_text">Quantity</string>
    <string name="minus_text">-</string>
    <string name="number_order_text">1</string>
    <string name="plus_text">+</string>
    <string name="order_coffee_image">coffee image</string>
    <string name="order_button">Add To Cart</string>
    <string name="welcome_back_add_screen">Welcome back,</string>
    <string name="welcome_text">Welcome,</string>
    <string name="add_coffee_add_screen">Add Coffee</string>
    <string name="coffee_name">Coffee Name</string>
    <string name="coffee_description">Coffee Description</string>
    <string name="coffee_price">Coffee Price</string>
    <string name="add_coffee_button">Save</string>
    <string name="hello_main">Hello,</string>
    <string name="all_coffee_main">All Coffee</string>
    <string name="sign_up_to_continue_register">Sign Up to continue</string>
    <string name="first_name_register">First Name</string>
    <string name="last_name_register">Last Name</string>
    <string name="email_register">Email</string>
    <string name="location_register">Location</string>
    <string name="password_register">Password</string>
    <string name="setting_text">Setting</string>
    <string name="dark_mode_setting">Dark mode</string>
    <string name="update_user_button_setting">Update User</string>
    <string name="delete_icon">Delete</string>
    <string name="edit_coffee_text">Edit Coffee</string>
    <string name="update_text">Update</string>
    <string name="update_to_continue_text">Update to Continue</string>
    <string name="sign_in_to_continue_text">Sign In to Continue</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="cancel_text">Cancel</string>
    <string name="choose_theme_text">Choose Theme</string>
    <string name="dark_text">Night</string>
    <string name="light_text">Day</string>
    <string name="choose_language_text">Choose language</string>
    <string name="english_text">English</string>
    <string name="arabic_text">العربية</string>
    <string name="language_text">Language</string>
    <string name="save_password_text">Save Password</string>
    <string name="undo_text">UNDO</string>
    <string name="ok_text">Ok</string>
    <string name="error_text">Error</string>
    <string name="invalid_user_text">Invalid login information</string>
    <string name="fill_out_all_field_text">Fill out all field!!</string>
    <string name="expensive_text">This is so expensive!</string>
</resources>
