<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="?attr/button_color"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/order_coffee_image"
            android:scaleType="centerCrop"
            android:src="@drawable/man" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/icon_image"
            android:text="@string/hello_main"
            android:textColor="?attr/header_text_color"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/icon_image"
            android:textColor="?attr/header_text_color"
            tools:ignore="RelativeOverlap"
            tools:text="Motwkel Idris" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/order_coffee_image"
            android:src="@drawable/ic_settings_24dp"
            android:tint="?attr/fab_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/app_bar_shape"
        android:paddingTop="15dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_recycler_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/all_coffee_main"
                android:textColor="?attr/title_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!--
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="See all"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp" />
                        -->
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vertical_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:paddingStart="7dp"
            android:paddingEnd="7dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:focusable="true"
            android:src="@drawable/ic_add_24dp"
            android:tint="?attr/button_color"
            app:backgroundTint="?attr/fab_color" />

    </RelativeLayout>
</RelativeLayout>